Make :host account for its own pseudo-class specificity.

Otherwise `:host div` is equally specific to `div`, which seems undesirable and
doesn't match any spec.

Bug: 857415
Change-Id: I0a012ada134acb022dab85c3912b33ac5d0bd1dd
Reviewed-on: https://chromium-review.googlesource.com/1238445
Commit-Queue: Emilio Cobos Álvarez <emilio@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594745}