third_party/blink/renderer/core/css/selector_checker.cc
@@ -1171,6 +1171,8 @@ bool SelectorChecker::CheckPseudoElement(const SelectorCheckingContext& context,
       sub_context.treat_shadow_host_as_normal_scope = false;
 
       // ::slotted() only allows one compound selector.
+      //
+      // TODO(emilio): Should account for specificity here.
       DCHECK(selector.SelectorList()->First());
       DCHECK(!CSSSelectorList::Next(*selector.SelectorList()->First()));
       sub_context.selector = selector.SelectorList()->First();
@@ -1204,8 +1206,10 @@ bool SelectorChecker::CheckPseudoHost(const SelectorCheckingContext& context,
   DCHECK(IsShadowHost(element));
 
   // For the case with no parameters, i.e. just :host.
-  if (!selector.SelectorList())
+  if (!selector.SelectorList()) {
+    result.specificity += CSSSelector::kClassLikeSpecificity;
     return true;
+  }
 
   SelectorCheckingContext sub_context(context);
   sub_context.is_sub_selector = true;
@@ -1246,7 +1250,7 @@ bool SelectorChecker::CheckPseudoHost(const SelectorCheckingContext& context,
     } while (next_element);
   }
   if (matched) {
-    result.specificity += max_specificity;
+    result.specificity += max_specificity + CSSSelector::kClassLikeSpecificity;
     return true;
   }
 
